[tool.poetry]
name = "aiohttp-ap_server"
version = "0.1.0"
description = ""
authors = ["Alexander Kulikov <nafanyabr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
aiohttp = "^3.7.3"
jsons = "^1.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-aiohttp = "^0.3.0"
jsons = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
